--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Josefin+Sans" />
+    <link rel='stylesheet' type="text/css" href='https://fonts.googleapis.com/css?family=Prompt'>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="For searching files!"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Formflow</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
